Add get anime by id, censorship, update base to v2
