# backend/src/controllers/animedb/animedb.controller.ts
@@ -1,7 +1,7 @@
-import { Route, Get, Controller, Query } from "tsoa";
+import { Route, Get, Controller, Query, Path } from "tsoa";
 
 // type
-import { AnimeList } from "./animedb.schema";
+import { AnimeItem, AnimeList, animeTags } from "./animedb.schema";
 
 // Service
 import { AnimeDbService } from "./animedbService";
@@ -9,9 +9,7 @@ import { AnimeDbService } from "./animedbService";
 @Route("/animedb")
 export class AnimeDbController extends Controller {
   @Get("/")
-  public async getAll(
-    @Query() limit?: number
-  ): Promise<AnimeList> {
+  public async getAll(@Query() limit?: number): Promise<AnimeList> {
     try {
       const docs = await new AnimeDbService().getAll(limit);
       if (docs && docs.length) {
@@ -22,6 +20,37 @@ export class AnimeDbController extends Controller {
       }
     } catch (error) {
       this.setStatus(500);
+      return error;
+    }
+  }
+
+  @Get("/anime/{animeId}")
+  public async getOne(@Path() animeId: string): Promise<AnimeItem> {
+    try {
+      const doc = await new AnimeDbService().getOne(animeId);
+      if (doc) {
+        this.setStatus(200);
+        return doc;
+      } else {
+        this.setStatus(404);
+      }
+    } catch (error) {
+      this.setStatus(404);
+      return error;
+    }
+  }
+
+  @Get("/tags")
+  public async getAnimeTags(): Promise<string[]> {
+    try {
+      if (animeTags) {
+        this.setStatus(200);
+        return animeTags;
+      } else {
+        this.setStatus(404);
+      }
+    } catch (error) {
+      this.setStatus(404);
       return error;
     }
   }
