# backend/src/routes/routes.ts
@@ -14,21 +14,41 @@ import * as express from 'express';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "AnimeTypes": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Special"]},{"dataType":"enum","enums":["Movie"]},{"dataType":"enum","enums":["OVA"]},{"dataType":"enum","enums":["ONA"]},{"dataType":"enum","enums":["TV"]},{"dataType":"enum","enums":[""]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AnimeStatuses": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["FINISHED"]},{"dataType":"enum","enums":["UPCOMING"]},{"dataType":"enum","enums":["UNKNOWN"]},{"dataType":"enum","enums":["CURRENTLY"]},{"dataType":"enum","enums":[""]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AnimeSeason": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["SUMMER"]},{"dataType":"enum","enums":["UNDEFINED"]},{"dataType":"enum","enums":["WINTER"]},{"dataType":"enum","enums":["SPRING"]},{"dataType":"enum","enums":["FALL"]},{"dataType":"enum","enums":[""]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AnimeTags": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["alternative present"]},{"dataType":"enum","enums":["amnesia"]},{"dataType":"enum","enums":["anti-hero"]},{"dataType":"enum","enums":["asia"]},{"dataType":"enum","enums":["based on a manga"]},{"dataType":"enum","enums":["contemporary fantasy"]},{"dataType":"enum","enums":["cops"]},{"dataType":"enum","enums":["crime"]},{"dataType":"enum","enums":["criminals"]},{"dataType":"enum","enums":["demons"]},{"dataType":"enum","enums":["detective"]},{"dataType":"enum","enums":["detectives"]},{"dataType":"enum","enums":["drama"]},{"dataType":"enum","enums":["earth"]},{"dataType":"enum","enums":["espionage"]},{"dataType":"enum","enums":["gods"]},{"dataType":"enum","enums":["japan"]},{"dataType":"enum","enums":["male protagonist"]},{"dataType":"enum","enums":["manga"]},{"dataType":"enum","enums":["mind games"]},{"dataType":"enum","enums":["mystery"]},{"dataType":"enum","enums":["overpowered main characters"]},{"dataType":"enum","enums":["philosophy"]},{"dataType":"enum","enums":["plot continuity"]},{"dataType":"enum","enums":["police"]},{"dataType":"enum","enums":["present"]},{"dataType":"enum","enums":["primarily adult cast"]},{"dataType":"enum","enums":["primarily male cast"]},{"dataType":"enum","enums":["psychological"]},{"dataType":"enum","enums":["psychopaths"]},{"dataType":"enum","enums":["revenge"]},{"dataType":"enum","enums":["rivalries"]},{"dataType":"enum","enums":["secret identity"]},{"dataType":"enum","enums":["serial killers"]},{"dataType":"enum","enums":["shinigami"]},{"dataType":"enum","enums":["shounen"]},{"dataType":"enum","enums":["supernatural"]},{"dataType":"enum","enums":["thriller"]},{"dataType":"enum","enums":["time skip"]},{"dataType":"enum","enums":["tragedy"]},{"dataType":"enum","enums":["urban"]},{"dataType":"enum","enums":["urban fantasy"]},{"dataType":"enum","enums":["vigilantes"]},{"dataType":"enum","enums":["work"]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "AnimeItem": {
         "dataType": "refObject",
         "properties": {
             "_id": {"dataType":"string","required":true},
             "sources": {"dataType":"array","array":{"dataType":"string"},"required":true},
             "title": {"dataType":"string","required":true},
-            "type": {"dataType":"string","required":true},
+            "type": {"ref":"AnimeTypes","required":true},
             "episodes": {"dataType":"double","required":true},
-            "status": {"dataType":"string","required":true},
-            "animeSeason": {"dataType":"nestedObjectLiteral","nestedProperties":{"year":{"dataType":"double","required":true},"season":{"dataType":"string","required":true}},"required":true},
+            "status": {"ref":"AnimeStatuses","required":true},
+            "animeSeason": {"dataType":"nestedObjectLiteral","nestedProperties":{"year":{"dataType":"double","required":true},"season":{"ref":"AnimeSeason","required":true}},"required":true},
             "picture": {"dataType":"string","required":true},
             "thumbnail": {"dataType":"string","required":true},
             "synonyms": {"dataType":"array","array":{"dataType":"string"},"required":true},
             "relations": {"dataType":"array","array":{"dataType":"string"},"required":true},
-            "tags": {"dataType":"array","array":{"dataType":"string"},"required":true},
+            "tags": {"dataType":"array","array":{"dataType":"refAlias","ref":"AnimeTags"},"required":true},
         },
         "additionalProperties": false,
     },
@@ -91,6 +111,49 @@ export function RegisterRoutes(app: express.Router) {
 
 
             const promise = controller.getAll.apply(controller, validatedArgs as any);
+            promiseHandler(controller, promise, response, undefined, next);
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/animedb/anime/:animeId',
+            function (request: any, response: any, next: any) {
+            const args = {
+                    animeId: {"in":"path","name":"animeId","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+            } catch (err) {
+                return next(err);
+            }
+
+            const controller = new AnimeDbController();
+
+
+            const promise = controller.getOne.apply(controller, validatedArgs as any);
+            promiseHandler(controller, promise, response, undefined, next);
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/animedb/tags',
+            function (request: any, response: any, next: any) {
+            const args = {
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+            } catch (err) {
+                return next(err);
+            }
+
+            const controller = new AnimeDbController();
+
+
+            const promise = controller.getAnimeTags.apply(controller, validatedArgs as any);
             promiseHandler(controller, promise, response, undefined, next);
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
